# local-chat

./: README.md  compose.yaml
backend/: .env  .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  conversations.py  datetime.py
backend/app/core/: database.py  settings.py
backend/app/models/: conversation.py
backend/app/schemas/: conversation.py
backend/app/services/: agent_context.py  ollama_chat.py  web_search.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: chat.ts  conversations.ts  datetime.ts
frontend/src/components/: ChatArea.tsx  MarkdownMessage.tsx  Sidebar.tsx  ThinkingPanel.tsx
frontend/src/types/: index.ts
